--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -3,6 +3,7 @@
   name: cyhy_core
 - src: https://github.com/cisagov/ansible-role-ncats-webd
   name: ncats_webd
+  version: bugfix/test_ncats-webd_dependency_fix
 - src: https://github.com/cisagov/ansible-role-pip
   name: pip
 - src: https://github.com/cisagov/ansible-role-python
